--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "name": "@novom/belenios-api",
+  "version": "0.0.0",
+  "description": "A server API wrapping the belenios-tool command-line tool",
   "scripts": {
     "start": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/Server",
-    "start:client": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/Client",
+    "start:voterClient": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/examples/VoterClient",
+    "start:adminClient": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/examples/AdminClient",
     "setup": "make && mkdir elections",
     "wipeout": "rm -r elections/*"
   },
