--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "^0.0.1-security",
+    "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "long-timeout": "^0.1.1",
     "socket.io": "^4.0.1",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
