--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start:voterClient": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/examples/VoterClient",
     "start:adminClient": "JWT_SECRET='hii' JWT_ALGO='HS256' nodemon --watch api --exec babel-node api/src/examples/AdminClient",
     "setup": "make && mkdir elections",
+    "test": "yarn test:lint && yarn test:unit",
+    "test:unit": "jest --runInBand",
+    "test:lint": "eslint src && stylelint \"src/**/*.js\"",
     "wipeout": "rm -r elections/*"
   },
   "dependencies": {
@@ -15,6 +18,7 @@
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "long-timeout": "^0.1.1",
+    "rimraf": "^3.0.2",
     "socket.io": "^4.0.1",
     "socket.io-client": "^4.1.1"
   },
